Modify config.toml to use archie

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,19 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = "My Blog"
+languageCode = "en-us"
+baseURL = "https://heyhx.xyz/"
+theme = "archie"
+
+[menu]
+
+  [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about/"
+    weight = 10
+
+  [[menu.main]]
+    identifier = "posts"
+    name = "Posts"
+    url = "/posts/"
+    weight = 20
+
