--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,16 @@
-title = "My Blog"
+title = "hey world"
 languageCode = "en-us"
 baseURL = "https://heyhx.xyz/"
 theme = "archie"
 
-[menu]
 
-  [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    weight = 10
+[params]
+	mode="toggle" # color-mode → light,dark,toggle or auto
+	useCDN=true # don't use CDNs for fonts and icons, instead serve them locally.
+	mathjax = true # enable MathJax support
+	katex = true # enable KaTeX support
+
+[menu]
 
   [[menu.main]]
     identifier = "posts"
